--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,22 @@
 [package]
-authors = ["{{authors}}"]
+authors = ["n-inokawa <48897392+n-inokawa@users.noreply.github.com>"]
 edition = "2018"
 readme = "README.md"
-name = "{{project-name}}"
+name = "rust-stm32f4-discovery"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.6.0"
-cortex-m-rt = "0.6.10"
-cortex-m-semihosting = "0.3.3"
+cortex-m = "0.6.3"
+cortex-m-rt = "0.6.12"
+cortex-m-semihosting = "0.3.5"
 panic-halt = "0.2.0"
 
-# Uncomment for the panic example.
-# panic-itm = "0.4.1"
+[dependencies.stm32f4]
+features = ["stm32f407", "rt"]
+version = "0.11.0"
 
-# Uncomment for the allocator example.
-# alloc-cortex-m = "0.3.5"
-
-# Uncomment for the device example.
-# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
-# and then use `cargo build --examples device` to build it.
-# [dependencies.stm32f3]
-# features = ["stm32f303", "rt"]
-# version = "0.7.1"
-
-# this lets you use `cargo fix`!
 [[bin]]
-name = "{{project-name}}"
+name = "rust-stm32f4-discovery"
 test = false
 bench = false
 
